# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml
gendiff/: __init__.py
gendiff/diff/: formatter1.py  get_diff.py  parse.py  stylish.py
gendiff/diff/format/: change_values.py  formatter1.py  formatter2.py  formatter3.py  supporting.py
gendiff/scripts/: gendiff.py
tests/: test_get_diff.py
tests/fixtures/: file1.json  result_json.txt
